--- a/TestingFinal/client/src/app/customerpage/customerpage.component.html
+++ b/TestingFinal/client/src/app/customerpage/customerpage.component.html
@@ -1,32 +1,31 @@
-<nav *ngIf="!viewtickets" class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-  <div class="container">
-    <a class="navbar-brand" routerLink="/customer">BankingMadeEasy</a>
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/customer">Home</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/customer" (click)="customerviewtickets()">View Tickets</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/newticket">Create New Tickets</a>
-      </li>
-    </ul>
+<div *ngIf="!viewtickets">
+  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+    <div class="container">
+      <a class="navbar-brand" routerLink="/customer">BankingMadeEasy</a>
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/customer" (click)="home()">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/customer" (click)="customerviewtickets()">View Tickets</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/newticket">Create New Tickets</a>
+        </li>
+      </ul>
 
-
-    <div class="dropdown" dropdown>
-      <a class="dropdown-toggle text-light" dropdownToggle>Welcome</a>
-      <div class="dropdown-menu mt-3" *dropdownMenu>
-        <a class="dropdown-item">Edit Profile</a>
-        <a class="dropdown-item" (click)="logout()">Logout</a>
+      <div class="dropdown" dropdown>
+        <a class="dropdown-toggle text-light" dropdownToggle>Welcome</a>
+        <div class="dropdown-menu mt-3" *dropdownMenu>
+          <a class="dropdown-item">Edit Profile</a>
+          <a class="dropdown-item" (click)="logout()">Logout</a>
+        </div>
       </div>
     </div>
+  </nav>
+</div>
 
-  </div>
-</nav>
-
-<div *ngIf="viewtickets">
-  <div>
+  <div *ngIf="viewtickets">
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
       <div class="container">
         <a class="navbar-brand" routerLink="/customer">BankingMadeEasy</a>
@@ -48,20 +47,22 @@
         </div>
       </div>
     </nav>
-
     <div>
-      <table class="table table-bordered table-striped">
+      <table style="width: 1000px; height: 500px; padding: 20px;
+               margin-top: 70px" class="table table-bordered table-striped container">
         <thead>
           <tr>
-            <th>category</th>
-            <th>subcategory</th>
-            <th>contactnumber</th>
-            <th>comments</th>
-            <th>status</th>
+            <th>Ticketid</th>
+            <th>Category</th>
+            <th>SubCategory</th>
+            <th>ContactNumber</th>
+            <th>Comments</th>
+            <th>Status</th>
           </tr>
         </thead>
         <tbody>
           <tr *ngFor="let custticketsviews of custticketsview">
+            <td><span>{{custticketsviews.id}}</span></td>
             <td><span>{{custticketsviews.category}}</span></td>
             <td><span>{{custticketsviews.subCategory}}</span></td>
             <td><span>{{custticketsviews.contactNumber}}</span></td>
@@ -72,6 +73,6 @@
       </table>
     </div>
 
+
   </div>
 
-</div>
